# phanes

./: CONTRIBUTORS.md  Cargo.toml  README.md
languages/: de_DE.toml  en-US.toml
src/: main.rs
src/data/: data.db
src/datamanager/: category.rs  db.rs  mod.rs  status.rs  task.rs
src/menu/: mod.rs
src/tui/: mod.rs
