[package]
name = "phanes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "0.26.0"
languages-rs = { version = "0.2.0", features = ["with-toml"] }
sys-locale = "0.2.0"

[dependencies.cursive]
version = "0.17.0"
default-features = false
features = ["crossterm-backend"]